apps/projects/incubator/webservers/rei-nginx/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging-nginx
  name: rei-nginx
  namespace: rei-nginx
spec:
  tls:
  - hosts:
    - tales.moff.ch
    secretName: rei-nginx-tls
  ingressClassName: nginx
  rules:
  - host: tales.moff.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rei-nginx
            port:
              number: 80
